# Vector3D-Engine

./: CMakeLists.txt  README.md  buildgenerated_registry.cpp.tmp
include/: BasicGeometry.h  Camera.h  Component.h  Engine.h  GameObject.h  InputHandler.h  Light.h  Renderer.h  Scene.h  Settings.h  Transform.h  Window.h
include/BasicObjects/: Camera.h  FlatLum.h  Lumination.h
src/: BasicGeometry.cpp  Engine.cpp  GameObject.cpp  InputHandler.cpp  Renderer.cpp  Scene.cpp  Settings.cpp  Transform.cpp  Window.cpp  main.cpp
src/BasicObjects/: Camera.cpp  FlatLum.cpp
